test/compiler_errors/include-has-extra-children.lzx
<!-- include element can't have children; should signal warning -->
<canvas>
  <include href="a.lzx">
    <view/>
  </include>
</canvas>
<!-- * X_LZ_COPYRIGHT_BEGIN ***************************************************
* Copyright 2001-2004 Laszlo Systems, Inc.  All Rights Reserved.              *
* Use is subject to license terms.                                            *
* X_LZ_COPYRIGHT_END ****************************************************** -->
